content/kubernetes/configuration/kubectl/network-policy/2-allow-all-traffic.yaml
# Allow all incoming outgoing traffic for NAMESPACE pods
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: NP-ALLOW-ALL
  namespace: NAMESPACE
spec:
  podSelector:
    matchLabels:
      app: demo
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - {}
