content/kubernetes/configuration/kubectl/network-policy/5-allow-ns-to-ns.yaml
# NAMESPACE pods will only receive and send traffic with NAMESPACE_2
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: NP-NAMESPACE
  namespace: NAMESPACE
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: NAMESPACE_2
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: NAMESPACE_2
