content/kubernetes/configuration/kubectl/network-policy/6-allow-ipblock.yaml
# NAMESPACE pods will only receive and send traffic from 10.0.0.0/24 ip block
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: NP-NAMESPACE-IP
  namespace: NAMESPACE
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.0.0.0/24
  egress:
    - to:
        - ipBlock:
            cidr: 10.0.0.0/24
