content/kubernetes/configuration/kubectl/network-policy/7-allow-multi-selector.yaml
# NAMESPACE pods will only receive traffic from NAMESPACE_2 or APP=FRONTEND pods
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: NP-MULTI-SELECTOR-UNION
  namespace: NAMESPACE
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: NAMESPACE_2
        - podSelector:
            matchLabels:
              app: FRONTEND
---
# NAMESPACE pods will only receive traffic from NAMESPACE_2 and APP=FRONTEND pods
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: NP-MULTI-SELECTOR-INTERSECT
  namespace: NAMESPACE
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: NAMESPACE_2
          podSelector:
            matchLabels:
              app: FRONTEND
