content/kubernetes/configuration/kubectl/network-policy/8-allow-port-range.yaml
# NAMESPACE pods will only receive traffic from NAMESPACE_2 pods in 80, 100-1000 ports
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: NP-PORT-RANGE
  namespace: NAMESPACE
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: NAMESPACE_2
          ports:
            - protocol: TCP
              port: 80
            - protocol: TCP
              port: 100
              endPort: 1000
